force-app/main/default/objects/SubProducto__c/SubProducto__c.object-meta.xml
<CustomObject>
    <label>SubProducto</label>
    <nameField>
        <label>Cargo Adicional</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SubProductos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>