force-app/main/default/objects/SubProducto__c/fields/Escala_de_Temperatura__c.field-meta.xml
<CustomField>
    <fullName>Escala_de_Temperatura__c</fullName>
    <label>Escala de Temperatura</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>°C</fullName>
            </value>
            <value>
                <fullName>°F</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>