force-app/main/default/objects/SubProducto__c/fields/Item_Height__c.field-meta.xml
<CustomField>
    <fullName>Item_Height__c</fullName>
    <label>Item Height(cm)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>