force-app/main/default/objects/SubProducto__c/fields/SAP_Service_Type_Buy__c.field-meta.xml
<CustomField>
    <fullName>SAP_Service_Type_Buy__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>SAP Service Type Buy</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.SubProduct_Grupo_Oportunidad__c</field>
            <operation>equals</operation>
            <valueField>SAP_Service_Type__c.Group__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>SAP_Service_Type__c</referenceTo>
    <relationshipLabel>SubProductos (SAP Service Type Buy)</relationshipLabel>
    <relationshipName>SubProductos1</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>