force-app/main/default/objects/SubProducto__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cotizada</fullName>
            </value>
            <value>
                <fullName>No Cotizada</fullName>
            </value>
            <value>
                <fullName>Pendiente por Cotizar</fullName>
                <default>true</default>
                <label>Pendiente por Cotizar</label>
            </value>
            <value>
                <fullName>Rechazada</fullName>
            </value>
            <value>
                <fullName>Aceptada</fullName>
            </value>
            <value>
                <fullName>Negociación con cliente</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>