force-app/main/default/objects/SubProducto__c/fields/SubProduct_Asesoria__c.field-meta.xml
<CustomField>
    <fullName>SubProduct_Asesoria__c</fullName>
    <label>Asesoria</label>
    <length>150</length>
    <type>Text</type>
</CustomField>