force-app/main/default/objects/SubProducto__c/fields/SubProduct_Buy_Price__c.field-meta.xml
<CustomField>
    <fullName>SubProduct_Buy_Price__c</fullName>
    <label>Buy Price</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>