force-app/main/default/objects/SubProducto__c/fields/SubProduct_Buy_Price_Converted__c.field-meta.xml
<CustomField>
    <fullName>SubProduct_Buy_Price_Converted__c</fullName>
    <label>Buy Price Converted</label>
    <length>200</length>
    <type>Text</type>
</CustomField>