force-app/main/default/objects/SubProducto__c/fields/SubProduct_Comercializadora__c.field-meta.xml
<CustomField>
    <fullName>SubProduct_Comercializadora__c</fullName>
    <label>Comercializadora</label>
    <length>150</length>
    <type>Text</type>
</CustomField>