force-app/main/default/objects/SubProducto__c/fields/SubProduct_Despacho__c.field-meta.xml
<CustomField>
    <fullName>SubProduct_Despacho__c</fullName>
    <label>Despacho</label>
    <length>150</length>
    <type>Text</type>
</CustomField>