force-app/main/default/objects/SubProducto__c/fields/SubProduct_Detalles__c.field-meta.xml
<CustomField>
    <fullName>SubProduct_Detalles__c</fullName>
    <label>Detalles</label>
    <type>TextArea</type>
</CustomField>