force-app/main/default/objects/SubProducto__c/fields/SubProduct_Dimensiones_cm__c.field-meta.xml
<CustomField>
    <fullName>SubProduct_Dimensiones_cm__c</fullName>
    <label>Dimensiones (cm)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>