force-app/main/default/objects/SubProducto__c/fields/SubProduct_Grupo_Oportunidad__c.field-meta.xml
<CustomField>
    <fullName>SubProduct_Grupo_Oportunidad__c</fullName>
    <label>Grupo Oportunidad</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SP-FN-FLETE NACIONAL</fullName>
            </value>
            <value>
                <fullName>SP-FI-FLETE INTER</fullName>
            </value>
            <value>
                <fullName>SP-A-AEREO</fullName>
            </value>
            <value>
                <fullName>SP-CE-COMERCIO EXT</fullName>
            </value>
            <value>
                <fullName>SP-M-MARITIMO</fullName>
            </value>
            <value>
                <fullName>SP-PTO-PUERTOS</fullName>
            </value>
            <value>
                <fullName>SP-R-GLOBAL ROUTING</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>