force-app/main/default/objects/SubProducto__c/fields/SubProduct_Hazmat__c.field-meta.xml
<CustomField>
    <fullName>SubProduct_Hazmat__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hazmat</label>
    <type>Checkbox</type>
</CustomField>