force-app/main/default/objects/SubProducto__c/fields/SubProduct_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>SubProduct_Opportunity__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>SubProductos</relationshipLabel>
    <relationshipName>SubProductos</relationshipName>
    <type>Lookup</type>
</CustomField>