force-app/main/default/objects/SubProducto__c/fields/SubProduct_Opportunity_Product__c.field-meta.xml
<CustomField>
    <fullName>SubProduct_Opportunity_Product__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Opportunity Product</label>
    <referenceTo>OpportunityLineItem</referenceTo>
    <relationshipLabel>SubProductos</relationshipLabel>
    <relationshipName>SubProductos</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>