force-app/main/default/objects/SubProducto__c/fields/SubProduct_Reefer__c.field-meta.xml
<CustomField>
    <fullName>SubProduct_Reefer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reefer</label>
    <type>Checkbox</type>
</CustomField>