force-app/main/default/objects/SubProducto__c/fields/SubProduct_Ruta_Producto__c.field-meta.xml
<CustomField>
    <fullName>SubProduct_Ruta_Producto__c</fullName>
    <formula>SubProduct_Opportunity_Product__r.Ruta__c &amp; &apos; Service Type: &apos; &amp; SubProduct_SAP_Service_Type__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ruta Producto</label>
    <type>Text</type>
</CustomField>