force-app/main/default/objects/SubProducto__c/fields/SubProduct_SAP_Service_Type__c.field-meta.xml
<CustomField>
    <fullName>SubProduct_SAP_Service_Type__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>SAP Service Type</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.SubProduct_Grupo_Oportunidad__c</field>
            <operation>equals</operation>
            <valueField>SAP_Service_Type__c.Group__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>SAP_Service_Type__c</referenceTo>
    <relationshipLabel>SubProductos</relationshipLabel>
    <relationshipName>SubProductos</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>