force-app/main/default/objects/SubProducto__c/fields/SubProduct_SeguroContenedor__c.field-meta.xml
<CustomField>
    <fullName>SubProduct_SeguroContenedor__c</fullName>
    <label>Seguro de Contenedor ($)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>