force-app/main/default/objects/SubProducto__c/fields/SubProduct_SeguroMercancia__c.field-meta.xml
<CustomField>
    <fullName>SubProduct_SeguroMercancia__c</fullName>
    <label>Seguro de Mercancia ($)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>