force-app/main/default/objects/SubProducto__c/fields/SubProduct_Sell_Price__c.field-meta.xml
<CustomField>
    <fullName>SubProduct_Sell_Price__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Campo que permite a los equipos comerciales colocar el precio de venta</description>
    <label>Sell Price</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>