force-app/main/default/objects/SubProducto__c/fields/SubProduct_Sell_Price_Converted__c.field-meta.xml
<CustomField>
    <fullName>SubProduct_Sell_Price_Converted__c</fullName>
    <label>Sell Price Converted</label>
    <length>200</length>
    <type>Text</type>
</CustomField>