force-app/main/default/objects/SubProducto__c/fields/SubProduct_Temperatura__c.field-meta.xml
<CustomField>
    <fullName>SubProduct_Temperatura__c</fullName>
    <label>Temperatura (°C o °F)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>