force-app/main/default/objects/SubProducto__c/fields/SubProduct_Trasborda__c.field-meta.xml
<CustomField>
    <fullName>SubProduct_Trasborda__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Trasborda?</label>
    <type>Checkbox</type>
</CustomField>