force-app/main/default/objects/SubProducto__c/fields/SubProduct_Units__c.field-meta.xml
<CustomField>
    <fullName>SubProduct_Units__c</fullName>
    <label>Units</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>