force-app/main/default/objects/SubProducto__c/fields/Tipo_de_moneda__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_moneda__c</fullName>
    <label>Tipo de moneda</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MXN</fullName>
            </value>
            <value>
                <fullName>USD</fullName>
            </value>
            <value>
                <fullName>EUR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>