force-app/main/default/objects/SubProducto__c/validationRules/Temperatura_Requerido.validationRule-meta.xml
<ValidationRule>
    <fullName>Temperatura_Requerido</fullName>
    <active>true</active>
    <description>Cuando el campo Reefer esta en true se requiere llenar el campo temperatura</description>
    <errorConditionFormula>AND(
    SubProduct_Reefer__c,
    ISBLANK(SubProduct_Temperatura__c)
)</errorConditionFormula>
    <errorMessage>Error SubP 001: El campo Reefer esta en true, se requiere llenar el campo temperatura</errorMessage>
</ValidationRule>